# InstagramCpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
http/: CMakeLists.txt
http/inc/: Definitions.h  FormData.h  Http.h  HttpClient.h  HttpHeader.h  HttpHeaderParser.h  HttpRequest.h  HttpResponse.h  HttpUrl.h
http/src/: CMakeLists.txt  FormData.cpp  Http.cpp  HttpClient.cpp  HttpHeader.cpp  HttpHeaderParser.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpUrl.cpp
http/src/exceptions/: HttpConnClosed.h  HttpConnRefused.h  HttpFailedToRecieve.h  HttpFailedToSend.h
instagram/: CMakeLists.txt
instagram/inc/: InstagramClient.h  InstagramConstants.h  InstagramDefinitions.h  InstagramEndpoints.h  InstagramParser.h  InstagramParsers.h
instagram/src/: CMakeLists.txt  InstagramClient.cpp  InstagramParser.cpp  InstagramParsers.cpp
instagram/src/results/: CMakeLists.txt
instagram/src/results/inc/: AuthorizationToken.h  BaseResult.h  CommentInfo.h  CommentsInfo.h  LocationInfo.h  LocationsInfo.h  MediaEntries.h  MediaEntry.h  RelationshipInfo.h  ResultCollection.hpp  TagInfo.h  TagsInfo.h  UserInfo.h  UsersInfo.h
instagram/src/results/src/: AuthorizationToken.cpp  BaseResult.cpp  CMakeLists.txt  CommentInfo.cpp  CommentsInfo.cpp  LocationInfo.cpp  LocationsInfo.cpp  MediaEntries.cpp  MediaEntry.cpp  RelationshipInfo.cpp  TagInfo.cpp  TagsInfo.cpp  UserInfo.cpp  UsersInfo.cpp
lib/: CMakeLists.txt
lib/inc/: InstagramClient.h  InstagramEndpoints.h  InstagramParsers.h
lib/inc/http/: Http.h  HttpClient.h  HttpHeader.h  HttpRequest.h  HttpResponse.h  HttpUrl.h
lib/inc/http/exceptions/: HttpBaseException.h  HttpTooBigResponse.h
lib/inc/http/sockets/: ConnectionListener.h
lib/inc/results/: CommentInfo.h  CommentsInfo.h  ResultCollection.hpp  TagsInfo.h  UserInfo.h  UsersInfo.h
lib/src/: CMakeLists.txt  InstagramClient.cpp  InstagramParsers.cpp
lib/src/http/: CMakeLists.txt  FormData.cpp  Http.cpp  HttpClient.cpp  HttpHeader.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpUrl.cpp
lib/src/http/sockets/: CMakeLists.txt  ConnectionListener.cpp  TCPSocket.cpp  TCPSocketWin.cpp
lib/src/results/: BaseResult.cpp  CMakeLists.txt  CommentInfo.cpp  TagInfo.cpp  UserInfo.cpp
sockets/: CMakeLists.txt
sockets/inc/: ConnectionListener.h  SSLSocket.h  TCPSocket.h
sockets/src/: CMakeLists.txt  ConnectionListener.cpp  SSLSocket.cpp  TCPSocket.cpp  TCPSocketLinux.cpp  TCPSocketWin.cpp
